--- a/build.gradle
+++ b/build.gradle
@@ -31,33 +31,34 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//spring boot starter security
-	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.3'
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
+	implementation 'org.springframework.boot:spring-boot:3.1.3'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	// https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis:3.1.3'
+	implementation 'org.modelmapper:modelmapper:3.1.1'
+
+
 
 	compileOnly 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
+	testImplementation 'org.springframework.security:spring-security-test:6.1.3'
 
 	// querydsl 추가 2
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
-
 	annotationProcessor(
 			"jakarta.persistence:jakarta.persistence-api",
 			"jakarta.annotation:jakarta.annotation-api",
 			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
-
-	// https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
-
-
 }
 
 tasks.named('test') {
@@ -73,4 +74,9 @@ sourceSets {
 	}
 }
 
-compileJava.dependsOn("clean")
+compileJava.dependsOn('clean')
+
+springBoot
+		{
+			mainClass = 'ShopApplication'
+		}
