--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
   port: 80                    # 포트 설정
 
 spring:
+  redis:
+    host: localhost
+    port: 6379
+
   application:
     name: geon-shop     # 프로젝트명 설정
 
